--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: node:18
     working_dir: /app
     volumes:
-      - .:/app
+      - ./celula:/app
     ports:
       - "3000:3000"
-    command: sh -c "npx create-react-app celula && cd celula && npm start"
+    command: npm start
